all success responsive

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container-custom">
             <input type="checkbox" name="" id="check">
-            
+
             <div class="logo-container">
                 <img src="/images/PDRC-logo.svg" alt="logo" width="40">
             </div>
@@ -34,19 +34,27 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                        <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
+                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม นักบินโดรน
+                                            เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง
+                                            (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย
+                                            (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -59,10 +67,13 @@
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png"
+                                                alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img
+                                                src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
@@ -115,7 +126,7 @@
                      
                     มาร่วมเดินทางไปสู่ความสำเร็จในอาชีพอากาศยานไร้คนขับ สร้างประสบการณ์ใหม่ สร้างอาชีพใหม่
                     ไปด้วยกันกับเรา</p>
-                    <span class="read-more">อ่านเพิ่มเติม</span>
+                <span class="read-more">อ่านเพิ่มเติม</span>
             </div>
         </div>
         <div class="image">
@@ -128,11 +139,11 @@
             <p class="text-overlay-2-full">บริษัท ซิสทรอนิกส์ จำกัด เราเชื่อมั่นในพลังแห่งการพัฒนาศักยภาพ
                 ความรู้ ทักษะความชำนาญ ไปสู่มิติแห่งวิชาชีพอากาศยานไร้คนขับ
                 ที่นับวันแต่จะเติบโตขึ้นขยายขอบข่ายการใช้งานอากาศยานไร้คนขับ
-                ไปยังธุรกิจที่หลากหลายขึ้นตั้งแต่ระดับพื้นฐานเพื่อเป้าหมาย Recreation 
-                ไปจนถึงระดับมืออาชีพเฉพาะทาง ด้วยความมุ่งมั่นนี้ ซิสทรอนิกส์ ลงทุนศูนย์ฝึกอบรม 
-                วิชาชีพอากาศยานไร้คนขับด้วยเงินทุน กว่า 40 ล้านบาท ทั้งสถานที่เพื่อใช้ในการฝึกปฏิบัติ 
-                และพัฒนาระบบ การอบรมออนไลน์เชื่อมโยงสนับสนุนกัน เพื่อสร้าง Solution ให้แก่ผู้เข้ารับการอบรม 
-                ให้ได้ผลอย่างเหนือความคาดหมาย มาร่วมเดินทางไปสู่ความสำเร็จในอาชีพอากาศยานไร้คนขับ 
+                ไปยังธุรกิจที่หลากหลายขึ้นตั้งแต่ระดับพื้นฐานเพื่อเป้าหมาย Recreation
+                ไปจนถึงระดับมืออาชีพเฉพาะทาง ด้วยความมุ่งมั่นนี้ ซิสทรอนิกส์ ลงทุนศูนย์ฝึกอบรม
+                วิชาชีพอากาศยานไร้คนขับด้วยเงินทุน กว่า 40 ล้านบาท ทั้งสถานที่เพื่อใช้ในการฝึกปฏิบัติ
+                และพัฒนาระบบ การอบรมออนไลน์เชื่อมโยงสนับสนุนกัน เพื่อสร้าง Solution ให้แก่ผู้เข้ารับการอบรม
+                ให้ได้ผลอย่างเหนือความคาดหมาย มาร่วมเดินทางไปสู่ความสำเร็จในอาชีพอากาศยานไร้คนขับ
                 สร้างประสบการณ์ใหม่ สร้างอาชีพใหม่ ไปด้วยกันกับเรา</p>
         </div>
     </div>
@@ -226,7 +237,70 @@
         </div>
     </div>
     <div class="footer__block">
-        <p class="footer__text">Footer</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <div>
+                            <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
+                        </div>
+                        <div>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์</p>
+                            <p class="text__white">เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี</p>
+                            <p class="text__white">รหัสไปรษณีย์ 20150</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <p class="white-title">
+                            ช่องทางติดต่อเรา
+                        </p>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/facebook1.png" alt="facebook-icon">
+                            </div>
+                            <p class="social__text"><a
+                                    href="https://www.facebook.com/profile.php?id=61558845597524">PDRC: Pattaya Drone
+                                    and Robotics Center</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/telephone1.png" alt="telephone1">
+                            </div>
+                            <p class="social__text">+66 (0) 3811 1860, +66 (0) 6 4654 4664</p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/website1.png" alt="website1">
+                            </div>
+                            <p class="social__text"><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/mail1.png" alt="mail1">
+                            </div>
+                            <p class="social__text">pdrc@systronics.co.th</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <div class="d-flex flex-column">
+                        <p class="white-title text__right">
+                            ผังเว็บไซต์
+                        </p>
+                        <p class="text__white text__left"><a href="index.html">Home</a></p>
+                        <p class="text__white text__left"><a href="course.html">Course</a></p>
+                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
+                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge Sharing</a></p>
+                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
+                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
+                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="/js/about.js"></script>
     <script src="/js/script.js"></script>
