--- a/course.html
+++ b/course.html
@@ -113,7 +113,7 @@
                     <img src="/images/drone_beginner.png" alt="drone_beginner" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน ขั้นพื้นฐาน (Drone for Beginners)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex">
+                    <div class="d-flex-align">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 5,500.-
@@ -137,7 +137,7 @@
                     <img src="/images/drone_beginner.png" alt="drone_beginner" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน FPV ขั้นพื้นฐาน (FPV Drone for Beginners)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex">
+                    <div class="d-flex-align">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -162,7 +162,7 @@
                     <p class="course__text">หลักสูตร นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ขั้นพื้นฐาน
                         (Drone Photography for Beginners)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 5,500.-
@@ -187,7 +187,7 @@
                     <p class="course__text">หลักสูตร พื้นฐานการควบคุมบังคับ โรโบติกส์ 
                         Unitree G02 (Command and Control Unitree Go2 for Beginner)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 5,500.-
@@ -212,7 +212,7 @@
                     <p class="course__text">หลักสูตร พื้นฐานการควบคุมหุ่นยนต์ Humanoid
                         (Command and Control Humanoid for Beginner)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -244,7 +244,7 @@
                     <img src="/images/course_2.png" alt="course_2" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน เพื่องานถ่ายภาพและวีดีโอ ระดับมืออาชีพ (Professional Drone Photography)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -268,7 +268,7 @@
                     <img src="/images/course_2.png" alt="course_2" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน FPV เพื่องานถ่ายภาพและวีดีโอ ระดับมืออาชีพ (Professional FPV Drone Pilot)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -300,7 +300,7 @@
                     <img src="/images/course_2.png" alt="course_2" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน ตรวจสอบแผงโซล่าเซลล์ (Drone for Solar PV Inspection)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -324,7 +324,7 @@
                     <img src="/images/course_3.png" alt="course_3" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน ถ่ายภาพความร้อน ระดับ 1 (Drone Level 1nfrared Thermography)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -349,7 +349,7 @@
                     <p class="course__text">หลักสูตร นักบินโดรน กู้ภัยและค้นหา 101 
                         (Drone Search and Rescue 101)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -374,7 +374,7 @@
                     <p class="course__text">หลักสูตร นักบินโดรน LIDAR งานสำรวจและรังวัด (Drone for Surveying and Mapping with
                         LiDAR Technology)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -398,7 +398,7 @@
                     <img src="/images/course_5.png" alt="course_5" width="100%">
                     <p class="course__text">หลักสูตร นักบินโดรน สร้างภาพ 3 มิติ (Drone 3D Modeling Photogrammetry)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -423,7 +423,7 @@
                     <p class="course__text">หลักสูตร นักบินโดรน งานสำรวจ รังวัดและแผนที่ทางอากาศ 
                         (Drone Pilot for Surveying and Mapping)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -455,7 +455,7 @@
                     <img src="/images/course_2.png" alt="course_2" width="100%">
                     <p class="course__text">RVC น้ำหนักน้อยกว่า 25 kg.</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -479,7 +479,7 @@
                     <img src="/images/course_2.png" alt="course_2" width="100%">
                     <p class="course__text">RVC น้ำหนักมากกว่า 25 kg.</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -512,7 +512,7 @@
                     <p class="course__text">หลักสูตร ผู้ตรวจภาพความร้อน ระดับ 1 
                         (Certify Level 1Infrared Thermography)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -537,7 +537,7 @@
                     <p class="course__text">หลักสูตร ผู้ตรวจภาพความร้อน ระดับ 2 
                         (Certify Level 2 Infrared Thermography)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -562,7 +562,7 @@
                     <p class="course__text">หลักสูตร ผู้ตรวจภาพความร้อน ระดับ 3 
                         (Certify Level 3 Infrared Thermography)</p>
                     <div class="bottom__line"></div>
-                    <div class="d-flex gap-2">
+                    <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
                                 25,000.-
@@ -584,7 +584,70 @@
         </div>
     </div>
     <div class="footer__block">
-        <p class="footer__text">Footer</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex-align flex-column">
+                        <div>
+                            <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
+                        </div>
+                        <div>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์</p>
+                            <p class="text__white">เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี</p>
+                            <p class="text__white">รหัสไปรษณีย์ 20150</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <p class="white-title">
+                            ช่องทางติดต่อเรา
+                        </p>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/facebook1.png" alt="facebook-icon">
+                            </div>
+                            <p class="social__text"><a
+                                    href="https://www.facebook.com/profile.php?id=61558845597524">PDRC: Pattaya Drone
+                                    and Robotics Center</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/telephone1.png" alt="telephone1">
+                            </div>
+                            <p class="social__text">+66 (0) 3811 1860, +66 (0) 6 4654 4664</p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/website1.png" alt="website1">
+                            </div>
+                            <p class="social__text"><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/mail1.png" alt="mail1">
+                            </div>
+                            <p class="social__text">pdrc@systronics.co.th</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <div class="d-flex-align flex-column">
+                        <p class="white-title text__right">
+                            ผังเว็บไซต์
+                        </p>
+                        <p class="text__white text__left"><a href="index.html">Home</a></p>
+                        <p class="text__white text__left"><a href="course.html">Course</a></p>
+                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
+                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge Sharing</a></p>
+                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
+                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
+                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
