--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container-custom">
             <input type="checkbox" name="" id="check">
-            
+
             <div class="logo-container">
                 <img src="/images/PDRC-logo.svg" alt="logo" width="40">
             </div>
@@ -31,23 +31,31 @@
                             <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="#" >Course</a>
+                            <a href="#">Course</a>
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                        <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
+                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม นักบินโดรน
+                                            เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง
+                                            (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย
+                                            (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -60,10 +68,13 @@
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png"
+                                                alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img
+                                                src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
@@ -192,7 +203,8 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="input-group input-group-lg custom__input__block">
-                                <textarea class="form-control custom__input__text" id="exampleFormControlTextarea1" rows="6" placeholder="ข้อความของคุณ"></textarea>
+                                <textarea class="form-control custom__input__text" id="exampleFormControlTextarea1"
+                                    rows="6" placeholder="ข้อความของคุณ"></textarea>
                             </div>
                         </div>
                     </div>
@@ -204,13 +216,75 @@
         </div>
     </div>
     <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.17361458332!2d100.9814679624422!3d12.832055171716965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3102ed0077eb5415%3A0xe96666df605d7a7c!2sPDRC%20(Pattaya%20Drone%20and%20Robotics%20Center!5e0!3m2!1sen!2sth!4v1730964032508!5m2!1sen!2sth"
-    class="iframe__width"
-    style="border: 0"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"
-  ></iframe>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.17361458332!2d100.9814679624422!3d12.832055171716965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3102ed0077eb5415%3A0xe96666df605d7a7c!2sPDRC%20(Pattaya%20Drone%20and%20Robotics%20Center!5e0!3m2!1sen!2sth!4v1730964032508!5m2!1sen!2sth"
+        class="iframe__width" style="border: 0" allowfullscreen loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer__block">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <div>
+                            <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
+                        </div>
+                        <div>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์</p>
+                            <p class="text__white">เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี</p>
+                            <p class="text__white">รหัสไปรษณีย์ 20150</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <p class="white-title">
+                            ช่องทางติดต่อเรา
+                        </p>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/facebook1.png" alt="facebook-icon">
+                            </div>
+                            <p class="social__text"><a
+                                    href="https://www.facebook.com/profile.php?id=61558845597524">PDRC: Pattaya Drone
+                                    and Robotics Center</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/telephone1.png" alt="telephone1">
+                            </div>
+                            <p class="social__text">+66 (0) 3811 1860, +66 (0) 6 4654 4664</p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/website1.png" alt="website1">
+                            </div>
+                            <p class="social__text"><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/mail1.png" alt="mail1">
+                            </div>
+                            <p class="social__text">pdrc@systronics.co.th</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <div class="d-flex flex-column">
+                        <p class="white-title text__right">
+                            ผังเว็บไซต์
+                        </p>
+                        <p class="text__white text__left"><a href="index.html">Home</a></p>
+                        <p class="text__white text__left"><a href="course.html">Course</a></p>
+                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
+                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge Sharing</a></p>
+                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
+                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
+                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="/js/script.js"></script>
     <script src="/js/contact_us.js"></script>
 </body>
