--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container-custom">
             <input type="checkbox" name="" id="check">
-            
+
             <div class="logo-container">
                 <img src="/images/PDRC-logo.svg" alt="logo" width="40">
             </div>
@@ -33,19 +33,27 @@
                             <div class="dropdown">
                                 <ul>
                                     <li class="dropdown-link">
-                                       <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
+                                        <a href="course.html"> <img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม ผู้เริ่มต้น (Beginner)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
+                                        <a href="#professional"> <img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม นักบินโดรน
+                                            เพื่องานถ่ายภาพและวิดีโอ ระดับมืออาชีพ (Professional)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</a>
+                                        <a href="#specialist"><img src="/images/reactangle.png" alt="rectangle"
+                                                width="10" class="rectangle__image"> กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง
+                                            (Specialist)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย (License)</a>
+                                        <a href="#license"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image"> กลุ่ม นักบินโดรน รับรองใบอนุญาตตามกฎหมาย
+                                            (License)</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
+                                        <a href="#cert"><img src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image"> กลุ่ม ผู้ตรวจสอบ (Certificate)</a>
                                     </li>
                                 </ul>
                             </div>
@@ -58,10 +66,13 @@
                             <div class="dropdown-2">
                                 <ul>
                                     <li class="dropdown-link">
-                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
+                                        <a href="knowledge_sharing.html"><img src="/images/reactangle.png"
+                                                alt="rectangle" width="10" class="rectangle__image"> บทความ</a>
                                     </li>
                                     <li class="dropdown-link">
-                                        <a href="promo_document.html" id="promo-docs-link"><img src="/images/reactangle.png" alt="rectangle" width="10" class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
+                                        <a href="promo_document.html" id="promo-docs-link"><img
+                                                src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image">เอกสารประชาสัมพันธ์ </a>
                                     </li>
                                 </ul>
                             </div>
@@ -122,7 +133,8 @@
             สร้างประสบการณ์ใหม่สร้างอาชีพใหม่ ไปด้วยกันกับเรา
         </div>
         <span class="read-more-btn">อ่านเพิ่มเติม</span>
-        <button class="button__overlay" id="seeMoreDetailBtn">see more detail&nbsp;&nbsp;&nbsp;<img src="./images/play-button.png" alt="play-button" width="100%" class="play__button"></span></button>
+        <button class="button__overlay" id="seeMoreDetailBtn">see more detail&nbsp;&nbsp;&nbsp;<img
+                src="./images/play-button.png" alt="play-button" width="100%" class="play__button"></span></button>
     </div>
     <div id="readMoreModal" class="modal">
         <div class="modal-content">
@@ -130,11 +142,11 @@
             <p class="text-overlay-2-full">บริษัท ซิสทรอนิกส์ จำกัด เราเชื่อมั่นในพลังแห่งการพัฒนาศักยภาพ
                 ความรู้ ทักษะความชำนาญ ไปสู่มิติแห่งวิชาชีพอากาศยานไร้คนขับ
                 ที่นับวันแต่จะเติบโตขึ้นขยายขอบข่ายการใช้งานอากาศยานไร้คนขับ
-                ไปยังธุรกิจที่หลากหลายขึ้นตั้งแต่ระดับพื้นฐานเพื่อเป้าหมาย Recreation 
-                ไปจนถึงระดับมืออาชีพเฉพาะทาง ด้วยความมุ่งมั่นนี้ ซิสทรอนิกส์ ลงทุนศูนย์ฝึกอบรม 
-                วิชาชีพอากาศยานไร้คนขับด้วยเงินทุน กว่า 40 ล้านบาท ทั้งสถานที่เพื่อใช้ในการฝึกปฏิบัติ 
-                และพัฒนาระบบ การอบรมออนไลน์เชื่อมโยงสนับสนุนกัน เพื่อสร้าง Solution ให้แก่ผู้เข้ารับการอบรม 
-                ให้ได้ผลอย่างเหนือความคาดหมาย มาร่วมเดินทางไปสู่ความสำเร็จในอาชีพอากาศยานไร้คนขับ 
+                ไปยังธุรกิจที่หลากหลายขึ้นตั้งแต่ระดับพื้นฐานเพื่อเป้าหมาย Recreation
+                ไปจนถึงระดับมืออาชีพเฉพาะทาง ด้วยความมุ่งมั่นนี้ ซิสทรอนิกส์ ลงทุนศูนย์ฝึกอบรม
+                วิชาชีพอากาศยานไร้คนขับด้วยเงินทุน กว่า 40 ล้านบาท ทั้งสถานที่เพื่อใช้ในการฝึกปฏิบัติ
+                และพัฒนาระบบ การอบรมออนไลน์เชื่อมโยงสนับสนุนกัน เพื่อสร้าง Solution ให้แก่ผู้เข้ารับการอบรม
+                ให้ได้ผลอย่างเหนือความคาดหมาย มาร่วมเดินทางไปสู่ความสำเร็จในอาชีพอากาศยานไร้คนขับ
                 สร้างประสบการณ์ใหม่ สร้างอาชีพใหม่ ไปด้วยกันกับเรา</p>
         </div>
     </div>
@@ -154,42 +166,121 @@
             เรียนแล้วได้อะไร
         </div>
         <div class="text-overlay-4">
-	        สำหรับผู้จบการฝึกอบรมในแต่ละหลักสูตรจะมีทักษะ (Skill) มีความสามารถ (Competency) มีความรู้ (Knowledge) ในระดับพื้นฐาน (Basic) จนถึงระดับสูง (Advance) สามารถทำการบินได้อย่างปลอดภัย (Aviation Safety) มีเข้าใจระบบการบินอากาศยานไร้คนขับในแบบต่างๆ ทั้งแบบปีกหมุน (Multi Rotor) และแบบปีกตรึง (Fixed Wing) สามารถปฏิบัติการบินได้ถูกต้องตามกฎหมาย พระราชบัญญัติการเดินอากาศ พ.ศ.2497 และประกาศกฎเกณฑ์ต่างๆ ที่เกี่ยวข้อง 
-            นอกจากนี้ ผู้จบในแต่ละหลักสูตรสามารถต่อยอดธุรกิจ สร้างมูลค่างาน พัฒนาวิชาชีพ สู่การประกอบอาชีพนักบินโดรนงานด้านต่างๆ อาทิ การเป็นนักบินโดรนภารกิจกู้ภัย ค้นหา นักบินโดรนเพื่อการสำรวจและรังวัด นักบินโดรนจัดทำแผนที่ทางอากาศ 2 มิติ 3 มิติ นักบินโดรนงานตรวจสอบ รวมถึง นักบินโดรนเกษตร เป็นต้น ซึ่งในแต่ละหลักสูตรที่ทางศูนย์ฝึกอบรมฯ จัดขึ้น ผู้ที่จบหลักสูตรจะได้รับใบประกาศนียบัตร (Drone Pilot Certificate) เพื่อรับรองความสามารถการเป็นนักบินโดรนในแต่ละหลักสูตร เพื่อใช้ในการอ้างอิงในการประกอบอาชีพการบินในอนาคตได้ 
-            ศูนย์ฝึกอบรมวิชาชีพอากาศยานไร้คนขับ PDRC มีการฝึกอบรมทั้งภาคทฤษฎี, ภาคจำลองเสมือนจริง และภาคอากาศให้เป็นไปตามมาตรฐานสากล International Civil Aviation Organization-ICAO และรับรองถูกต้องตามข้อกำหนดที่สำนักงานการบินพลเรือนแห่งประเทศไทย (กพท.) CAAT (The Civil Aviation Authority of Thailand) กำหนดทุกประการ โดยมุ่งเน้นทักษะความชำนาญ (Skill) ปลูกฝังจิตสำนึก (Attitude) จัดการด้านความปลอดภัย (Safety) บริหารและประเมินความเสี่ยง (Risk) การขออนุญาติการใช้ห้วงอากาศ (Air Space) เป็นต้น มีครูฝึกที่มีความรู้ มีประสบการณ์ด้านการสอน มีความชำนาญ ผ่านการฝึกอบรมทั้งจากในประเทศและต่างๆ ประเทศ ที่พร้อมจะให้ความรู้แก่ศิษย์การบินทุกท่าน จึงมั่นใจได้ว่าในทุกหลักสูตรที่ทางศูนย์ฝึกอบรม PDRC จัดขึ้น มีขั้นตอนการเรียน การสอนที่เป็นไปตามมาตรฐานในระดับประเทศและในระดับสากล 
+            สำหรับผู้จบการฝึกอบรมในแต่ละหลักสูตรจะมีทักษะ (Skill) มีความสามารถ (Competency) มีความรู้ (Knowledge)
+            ในระดับพื้นฐาน (Basic) จนถึงระดับสูง (Advance) สามารถทำการบินได้อย่างปลอดภัย (Aviation Safety)
+            มีเข้าใจระบบการบินอากาศยานไร้คนขับในแบบต่างๆ ทั้งแบบปีกหมุน (Multi Rotor) และแบบปีกตรึง (Fixed Wing)
+            สามารถปฏิบัติการบินได้ถูกต้องตามกฎหมาย พระราชบัญญัติการเดินอากาศ พ.ศ.2497 และประกาศกฎเกณฑ์ต่างๆ
+            ที่เกี่ยวข้อง
+            นอกจากนี้ ผู้จบในแต่ละหลักสูตรสามารถต่อยอดธุรกิจ สร้างมูลค่างาน พัฒนาวิชาชีพ
+            สู่การประกอบอาชีพนักบินโดรนงานด้านต่างๆ อาทิ การเป็นนักบินโดรนภารกิจกู้ภัย ค้นหา
+            นักบินโดรนเพื่อการสำรวจและรังวัด นักบินโดรนจัดทำแผนที่ทางอากาศ 2 มิติ 3 มิติ นักบินโดรนงานตรวจสอบ รวมถึง
+            นักบินโดรนเกษตร เป็นต้น ซึ่งในแต่ละหลักสูตรที่ทางศูนย์ฝึกอบรมฯ จัดขึ้น
+            ผู้ที่จบหลักสูตรจะได้รับใบประกาศนียบัตร (Drone Pilot Certificate)
+            เพื่อรับรองความสามารถการเป็นนักบินโดรนในแต่ละหลักสูตร เพื่อใช้ในการอ้างอิงในการประกอบอาชีพการบินในอนาคตได้
+            ศูนย์ฝึกอบรมวิชาชีพอากาศยานไร้คนขับ PDRC มีการฝึกอบรมทั้งภาคทฤษฎี, ภาคจำลองเสมือนจริง
+            และภาคอากาศให้เป็นไปตามมาตรฐานสากล International Civil Aviation Organization-ICAO
+            และรับรองถูกต้องตามข้อกำหนดที่สำนักงานการบินพลเรือนแห่งประเทศไทย (กพท.) CAAT (The Civil Aviation Authority
+            of Thailand) กำหนดทุกประการ โดยมุ่งเน้นทักษะความชำนาญ (Skill) ปลูกฝังจิตสำนึก (Attitude)
+            จัดการด้านความปลอดภัย (Safety) บริหารและประเมินความเสี่ยง (Risk) การขออนุญาติการใช้ห้วงอากาศ (Air Space)
+            เป็นต้น มีครูฝึกที่มีความรู้ มีประสบการณ์ด้านการสอน มีความชำนาญ ผ่านการฝึกอบรมทั้งจากในประเทศและต่างๆ ประเทศ
+            ที่พร้อมจะให้ความรู้แก่ศิษย์การบินทุกท่าน จึงมั่นใจได้ว่าในทุกหลักสูตรที่ทางศูนย์ฝึกอบรม PDRC จัดขึ้น
+            มีขั้นตอนการเรียน การสอนที่เป็นไปตามมาตรฐานในระดับประเทศและในระดับสากล
         </div>
         <span class="read-more-btn-2">อ่านเพิ่มเติม</span>
     </div>
     <div id="readMoreModal3" class="modal-2">
         <div class="modal-content3">
             <span class="close-modal3"><i class="ri-close-large-line"></i></span>
-            <p class="text-overlay-3-full"> สำหรับผู้จบการฝึกอบรมในแต่ละหลักสูตรจะมีทักษะ (Skill) มีความสามารถ (Competency) มีความรู้ (Knowledge) ในระดับพื้นฐาน (Basic) จนถึงระดับสูง (Advance) สามารถทำการบินได้อย่างปลอดภัย (Aviation Safety) มีเข้าใจระบบการบินอากาศยานไร้คนขับในแบบต่างๆ ทั้งแบบปีกหมุน (Multi Rotor) และแบบปีกตรึง (Fixed Wing) สามารถปฏิบัติการบินได้ถูกต้องตามกฎหมาย พระราชบัญญัติการเดินอากาศ พ.ศ.2497 และประกาศกฎเกณฑ์ต่างๆ ที่เกี่ยวข้อง 
-                นอกจากนี้ ผู้จบในแต่ละหลักสูตรสามารถต่อยอดธุรกิจ สร้างมูลค่างาน พัฒนาวิชาชีพ สู่การประกอบอาชีพนักบินโดรนงานด้านต่างๆ อาทิ การเป็นนักบินโดรนภารกิจกู้ภัย ค้นหา นักบินโดรนเพื่อการสำรวจและรังวัด นักบินโดรนจัดทำแผนที่ทางอากาศ 2 มิติ 3 มิติ นักบินโดรนงานตรวจสอบ รวมถึง นักบินโดรนเกษตร เป็นต้น ซึ่งในแต่ละหลักสูตรที่ทางศูนย์ฝึกอบรมฯ จัดขึ้น ผู้ที่จบหลักสูตรจะได้รับใบประกาศนียบัตร (Drone Pilot Certificate) เพื่อรับรองความสามารถการเป็นนักบินโดรนในแต่ละหลักสูตร เพื่อใช้ในการอ้างอิงในการประกอบอาชีพการบินในอนาคตได้ 
-                ศูนย์ฝึกอบรมวิชาชีพอากาศยานไร้คนขับ PDRC มีการฝึกอบรมทั้งภาคทฤษฎี, ภาคจำลองเสมือนจริง และภาคอากาศให้เป็นไปตามมาตรฐานสากล International Civil Aviation Organization-ICAO และรับรองถูกต้องตามข้อกำหนดที่สำนักงานการบินพลเรือนแห่งประเทศไทย (กพท.) CAAT (The Civil Aviation Authority of Thailand) กำหนดทุกประการ โดยมุ่งเน้นทักษะความชำนาญ (Skill) ปลูกฝังจิตสำนึก (Attitude) จัดการด้านความปลอดภัย (Safety) บริหารและประเมินความเสี่ยง (Risk) การขออนุญาติการใช้ห้วงอากาศ (Air Space) เป็นต้น มีครูฝึกที่มีความรู้ มีประสบการณ์ด้านการสอน มีความชำนาญ ผ่านการฝึกอบรมทั้งจากในประเทศและต่างๆ ประเทศ ที่พร้อมจะให้ความรู้แก่ศิษย์การบินทุกท่าน จึงมั่นใจได้ว่าในทุกหลักสูตรที่ทางศูนย์ฝึกอบรม PDRC จัดขึ้น มีขั้นตอนการเรียน การสอนที่เป็นไปตามมาตรฐานในระดับประเทศและในระดับสากล </p>
+            <p class="text-overlay-3-full"> สำหรับผู้จบการฝึกอบรมในแต่ละหลักสูตรจะมีทักษะ (Skill) มีความสามารถ
+                (Competency) มีความรู้ (Knowledge) ในระดับพื้นฐาน (Basic) จนถึงระดับสูง (Advance)
+                สามารถทำการบินได้อย่างปลอดภัย (Aviation Safety) มีเข้าใจระบบการบินอากาศยานไร้คนขับในแบบต่างๆ
+                ทั้งแบบปีกหมุน (Multi Rotor) และแบบปีกตรึง (Fixed Wing) สามารถปฏิบัติการบินได้ถูกต้องตามกฎหมาย
+                พระราชบัญญัติการเดินอากาศ พ.ศ.2497 และประกาศกฎเกณฑ์ต่างๆ ที่เกี่ยวข้อง
+                นอกจากนี้ ผู้จบในแต่ละหลักสูตรสามารถต่อยอดธุรกิจ สร้างมูลค่างาน พัฒนาวิชาชีพ
+                สู่การประกอบอาชีพนักบินโดรนงานด้านต่างๆ อาทิ การเป็นนักบินโดรนภารกิจกู้ภัย ค้นหา
+                นักบินโดรนเพื่อการสำรวจและรังวัด นักบินโดรนจัดทำแผนที่ทางอากาศ 2 มิติ 3 มิติ นักบินโดรนงานตรวจสอบ รวมถึง
+                นักบินโดรนเกษตร เป็นต้น ซึ่งในแต่ละหลักสูตรที่ทางศูนย์ฝึกอบรมฯ จัดขึ้น
+                ผู้ที่จบหลักสูตรจะได้รับใบประกาศนียบัตร (Drone Pilot Certificate)
+                เพื่อรับรองความสามารถการเป็นนักบินโดรนในแต่ละหลักสูตร
+                เพื่อใช้ในการอ้างอิงในการประกอบอาชีพการบินในอนาคตได้
+                ศูนย์ฝึกอบรมวิชาชีพอากาศยานไร้คนขับ PDRC มีการฝึกอบรมทั้งภาคทฤษฎี, ภาคจำลองเสมือนจริง
+                และภาคอากาศให้เป็นไปตามมาตรฐานสากล International Civil Aviation Organization-ICAO
+                และรับรองถูกต้องตามข้อกำหนดที่สำนักงานการบินพลเรือนแห่งประเทศไทย (กพท.) CAAT (The Civil Aviation
+                Authority of Thailand) กำหนดทุกประการ โดยมุ่งเน้นทักษะความชำนาญ (Skill) ปลูกฝังจิตสำนึก (Attitude)
+                จัดการด้านความปลอดภัย (Safety) บริหารและประเมินความเสี่ยง (Risk) การขออนุญาติการใช้ห้วงอากาศ (Air Space)
+                เป็นต้น มีครูฝึกที่มีความรู้ มีประสบการณ์ด้านการสอน มีความชำนาญ ผ่านการฝึกอบรมทั้งจากในประเทศและต่างๆ
+                ประเทศ ที่พร้อมจะให้ความรู้แก่ศิษย์การบินทุกท่าน จึงมั่นใจได้ว่าในทุกหลักสูตรที่ทางศูนย์ฝึกอบรม PDRC
+                จัดขึ้น มีขั้นตอนการเรียน การสอนที่เป็นไปตามมาตรฐานในระดับประเทศและในระดับสากล </p>
         </div>
     </div>
-    <!-- <div class="teacher__background">
-        <div class="container">
-            <div class="d-flex flex-row gap-4">
-                <div class="teacher__card__big" id="t02">
-                    <img src="./images/teacher-02.svg" alt="teacher-02" class="teacher__img">
-                    <div class="rect__wrapper"></div>
-                    <p class="teacher__text__name">จักรกฤษณ์ อุปยโส</p>
-                    <p class="teacher__text__desc">- จบจากสถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
-                    <p class="teacher__text__desc__2">- ผู้เชี่ยวชาญด้านภาพความร้อน ระดับ3 จากสถาบัน Institute of Infrared Thermography (IRT)</p>
-                    <p class="teacher__text__desc__3">- ครูการบินอากาศยานไร้คนขับ Instructor Remote Pilot Certificate(IRPC) จากสถาบันเทคโนโลยีป้องกันประเทศ (DTI-UTC)</p>
+    </div>
+    </div>
+    <div class="footer__block">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <div>
+                            <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
+                        </div>
+                        <div>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์</p>
+                            <p class="text__white">เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี</p>
+                            <p class="text__white">รหัสไปรษณีย์ 20150</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="teacher__card__small__1" id="t03">
-                    <img src="./images/teacher-03.svg" alt="teacher-03" class="teacher__img__small">
-                    <div class="rect__wrapper"></div>
-                    <p class="teacher__small__text__name">อาคม พรรณนิกร</p>
-                    <p class="teacher__small__text__desc">- จบจากมหาวิทยาลัยกรุงเทพ คณะนิเทศศาสตร์ ภาควิชาวารสารศาสตร์</p>
-                    <p class="teacher__small__text__desc__2">- ผู้เชี่ยวชาญ</p>
-                    <p class="teacher__small__text__desc__3">- ครูการบิ</p>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column">
+                        <p class="white-title">
+                            ช่องทางติดต่อเรา
+                        </p>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/facebook1.png" alt="facebook-icon">
+                            </div>
+                            <p class="social__text"><a
+                                    href="https://www.facebook.com/profile.php?id=61558845597524">PDRC: Pattaya Drone
+                                    and Robotics Center</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/telephone1.png" alt="telephone1">
+                            </div>
+                            <p class="social__text">+66 (0) 3811 1860, +66 (0) 6 4654 4664</p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/website1.png" alt="website1">
+                            </div>
+                            <p class="social__text"><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="icon__align">
+                                <img src="/images/mail1.png" alt="mail1">
+                            </div>
+                            <p class="social__text">pdrc@systronics.co.th</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <div class="d-flex flex-column">
+                        <p class="white-title text__right">
+                            ผังเว็บไซต์
+                        </p>
+                        <p class="text__white text__left"><a href="index.html">Home</a></p>
+                        <p class="text__white text__left"><a href="course.html">Course</a></p>
+                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
+                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge Sharing</a></p>
+                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
+                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
+                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!--================ MAIN JS=================-->
     <script src="/js/script.js"></script>
 </body>
