add cart and lang

--- a/about.html
+++ b/about.html
@@ -87,6 +87,15 @@
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="faq.html">FAQ</a>
                         </li>
+                        <li class="nav-link margin__left" style="--i: 1.35s;">
+                            <i class="ri-shopping-cart-2-fill red-cart"></i>
+                       </li>
+                       <li class="nav-link" style="--i: 1.35s">
+                           <select class="form-select">
+                               <option selected>TH</option>
+                               <option value="1">EN</option>
+                           </select>
+                      </li>
                     </ul>
                 </div>
 
