--- a/index.html
+++ b/index.html
@@ -86,9 +86,18 @@
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="faq.html">FAQ</a>
                         </li>
+                        <li class="nav-link margin__left" style="--i: 1.35s;">
+                             <i class="ri-shopping-cart-2-fill red-cart"></i>
+                        </li>
+                        <li class="nav-link" style="--i: 1.35s">
+                            <select class="form-select">
+                                <option selected>TH</option>
+                                <option value="1">EN</option>
+                            </select>
+                       </li>
                     </ul>
                 </div>
-
+               
                 <div class="log-sign" style="--i: 1.8s">
                     <a href="#" class="login__button">Log in</a>
                     <a href="#" class="signup__button">Register</a>
