--- a/contact.html
+++ b/contact.html
@@ -228,33 +228,32 @@
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.17361458332!2d100.9814679624422!3d12.832055171716965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3102ed0077eb5415%3A0xe96666df605d7a7c!2sPDRC%20(Pattaya%20Drone%20and%20Robotics%20Center!5e0!3m2!1sen!2sth!4v1730964032508!5m2!1sen!2sth"
         class="iframe__width" style="border: 0" allowfullscreen loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <div class="footer__block">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="d-flex flex-column">
-                        <div>
-                            <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
-                        </div>
-                        <div>
-                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์</p>
-                            <p class="text__white">เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
-                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี</p>
-                            <p class="text__white">รหัสไปรษณีย์ 20150</p>
+        <div class="footer__block">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="d-flex flex-column">
+                            <div>
+                                <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
+                            </div>
+                            <div>
+                                <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์ เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                                <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี รหัสไปรษณีย์ 20150</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="d-flex flex-column">
+                    <div class="col-12 col-md-6 col-lg-4 mb-5">
+        
                         <p class="white-title">
                             ช่องทางติดต่อเรา
                         </p>
+        
                         <div class="d-flex flex-row">
                             <div class="icon__align">
                                 <img src="/images/facebook1.png" alt="facebook-icon">
                             </div>
-                            <p class="social__text"><a
-                                    href="https://www.facebook.com/profile.php?id=61558845597524">PDRC: Pattaya Drone
+                            <p class="social__text me-5"><a href="https://www.facebook.com/profile.php?id=61558845597524">PDRC:
+                                    Pattaya Drone
                                     and Robotics Center</a></p>
                         </div>
                         <div class="d-flex flex-row">
@@ -267,33 +266,43 @@
                             <div class="icon__align">
                                 <img src="/images/website1.png" alt="website1">
                             </div>
-                            <p class="social__text"><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
+                            <p class="social__text "><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
                         </div>
                         <div class="d-flex flex-row">
                             <div class="icon__align">
                                 <img src="/images/mail1.png" alt="mail1">
                             </div>
-                            <p class="social__text">pdrc@systronics.co.th</p>
+                            <p class="social__text ">pdrc@systronics.co.th</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 mb-5">
-                    <div class="d-flex flex-column">
-                        <p class="white-title text__right">
-                            ผังเว็บไซต์
-                        </p>
-                        <p class="text__white text__left"><a href="index.html">Home</a></p>
-                        <p class="text__white text__left"><a href="course.html">Course</a></p>
-                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
-                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge Sharing</a></p>
-                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
-                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
-                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="d-flex flex-column">
+                            <p class="white-title text__right">
+                                ผังเว็บไซต์
+                            </p>
+                            <div class="row">
+                                <div class="col-12 col-md-12 col-lg-12">
+                                    <div class="d-flex flex-row gap-5">
+                                        <div class="d-flex flex-column">
+                                            <p class="text__white text__left"><a href="index.html">Home</a></p>
+                                            <p class="text__white text__left"><a href="course.html">Course</a></p>
+                                            <p class="text__white text__left"><a href="activities.html">Activities</a></p>
+                                            <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge
+                                                    Sharing</a></p>
+                                        </div>
+                                        <div class="d-flex flex-column">
+                                            <p class="text__white text__left"><a href="about.html">About Us</a></p>
+                                            <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
+                                            <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     <script src="/js/script.js"></script>
     <script src="/js/contact_us.js"></script>
 </body>
