--- a/playlist_drone_mapping_talk_2.html
+++ b/playlist_drone_mapping_talk_2.html
@@ -187,7 +187,7 @@
                 <div class="d-flex flex-row margin__align__video">
                     <div class="image__preview">
                         <a href="playlist_drone_mapping_talk_6.html">
-                            <img src="/images/banner__14.png alt=" class="banner__width">
+                            <img src="/images/banner__14.png" class="banner__width">
                         </a>
                     </div>
                     <div>
@@ -197,6 +197,8 @@
             </div>
         </div>
     </div>
+    <button class="floating-button"> <i class="ri-arrow-go-back-line"></i> <a href="knowledge_sharing.html">ย้อนกลับ</a>
+    </button>
     <div class="footer__block">
         <div class="container-fluid">
             <div class="row">
@@ -206,58 +208,67 @@
                             <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
                         </div>
                         <div>
-                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์</p>
-                            <p class="text__white">เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
-                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี</p>
-                            <p class="text__white">รหัสไปรษณีย์ 20150</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="d-flex flex-column">
-                        <p class="white-title">
-                            ช่องทางติดต่อเรา
-                        </p>
-                        <div class="d-flex flex-row">
-                            <div class="icon__align">
-                                <img src="/images/facebook1.png" alt="facebook-icon">
-                            </div>
-                            <p class="social__text"><a
-                                    href="https://www.facebook.com/profile.php?id=61558845597524">PDRC: Pattaya Drone
-                                    and Robotics Center</a></p>
-                        </div>
-                        <div class="d-flex flex-row">
-                            <div class="icon__align">
-                                <img src="/images/telephone1.png" alt="telephone1">
-                            </div>
-                            <p class="social__text">+66 (0) 3811 1860, +66 (0) 6 4654 4664</p>
-                        </div>
-                        <div class="d-flex flex-row">
-                            <div class="icon__align">
-                                <img src="/images/website1.png" alt="website1">
-                            </div>
-                            <p class="social__text"><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
-                        </div>
-                        <div class="d-flex flex-row">
-                            <div class="icon__align">
-                                <img src="/images/mail1.png" alt="mail1">
-                            </div>
-                            <p class="social__text">pdrc@systronics.co.th</p>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์ เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี รหัสไปรษณีย์ 20150</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mb-5">
+    
+                    <p class="white-title">
+                        ช่องทางติดต่อเรา
+                    </p>
+    
+                    <div class="d-flex flex-row">
+                        <div class="icon__align">
+                            <img src="/images/facebook1.png" alt="facebook-icon">
+                        </div>
+                        <p class="social__text me-5"><a href="https://www.facebook.com/profile.php?id=61558845597524">PDRC:
+                                Pattaya Drone
+                                and Robotics Center</a></p>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="icon__align">
+                            <img src="/images/telephone1.png" alt="telephone1">
+                        </div>
+                        <p class="social__text">+66 (0) 3811 1860, +66 (0) 6 4654 4664</p>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="icon__align">
+                            <img src="/images/website1.png" alt="website1">
+                        </div>
+                        <p class="social__text "><a href="https://www.pattayapdrc.com/">www.pattayapdrc.com</a></p>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="icon__align">
+                            <img src="/images/mail1.png" alt="mail1">
+                        </div>
+                        <p class="social__text ">pdrc@systronics.co.th</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
                     <div class="d-flex flex-column">
                         <p class="white-title text__right">
                             ผังเว็บไซต์
                         </p>
-                        <p class="text__white text__left"><a href="index.html">Home</a></p>
-                        <p class="text__white text__left"><a href="course.html">Course</a></p>
-                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
-                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge Sharing</a></p>
-                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
-                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
-                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                        <div class="row">
+                            <div class="col-12 col-md-12 col-lg-12">
+                                <div class="d-flex flex-row gap-5">
+                                    <div class="d-flex flex-column">
+                                        <p class="text__white text__left"><a href="index.html">Home</a></p>
+                                        <p class="text__white text__left"><a href="course.html">Course</a></p>
+                                        <p class="text__white text__left"><a href="activities.html">Activities</a></p>
+                                        <p class="text__white text__left"><a href="knowledge_sharing.html">knowledge
+                                                Sharing</a></p>
+                                    </div>
+                                    <div class="d-flex flex-column">
+                                        <p class="text__white text__left"><a href="about.html">About Us</a></p>
+                                        <p class="text__white text__left"><a href="contact.html">Contact Us</a></p>
+                                        <p class="text__white text__left"><a href="faq.html">FAQ</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
